flux/clusters/apps/base/water-taxi-simulator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: water-taxi-simulator
  namespace: water-taxi-simulator
  labels:
    app.kubernetes.io/name: water-taxi-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: water-taxi-simulator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: water-taxi-simulator
    spec:
      imagePullSecrets:
        - name: dockerhub-pull-secret
      containers:
        - name: water-taxi-simulator
          image: docker.io/rburtelow/water-taxi-simulator:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
