flux/clusters/apps/base/water-taxi-simulator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: water-taxi-simulator
  namespace: water-taxi-simulator
  labels:
    app.kubernetes.io/name: water-taxi-simulator
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: water-taxi-simulator
